app/styles/custom.css
h1,h2,h3,h4,h5,h6,.tagline{font-family: arial,sans-serif;}
.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
a{ color:#159CEB;}
a:focus{outline: none;}
button::-moz-focus-inner{border: 0;}
.navbar-brand { background:url(../images/fathome.png) no-repeat center; width:124px; height:42px; text-indent:-9999px;padding-top:11px;padding-bottom:11px}
.navbar > .container .navbar-brand{ margin-left:0px;}
.navbar { min-height:42px; box-shadow:0px 2px 2px rgba(0,0,0,0.4); border-radius:inherit; margin-bottom:0;z-index:9999}
.navbar-nav>li>a {padding-top:11px;padding-bottom:11px}
.nav li div{ color:#999999; padding:11px 15px; display:inline-block; background:#000;}
.nav li div a{ color:#fff;}
.nav li div a:hover,.nav li div a:active,.nav li div a:visited{ text-decoration:none}
.home-modal{ display:block; position:absolute; overflow:initial}
.home-modal .modal-dialog{ margin-top:55px; width: 438px; height: auto;}
.modal-content{ 
 -webkit-border-radius: 10px; 
 -moz-border-radius: 10px; 
 border-radius: 10px; 
 background-color: rgba(255,255,255,0); 
 -webkit-box-shadow: 0 0 16px #000; 
 -moz-box-shadow: 0 0 16px #000; 
 box-shadow: 0 0 16px #000; 
 border: solid 6px rgba(83,83,83,.8); 
 background-image: -webkit-linear-gradient(bottom, rgba(255,244,202,.5), rgba(255,255,255,.9)); 
 background-image: -moz-linear-gradient(bottom, rgba(255,244,202,.5), rgba(255,255,255,.9)); 
 background-image: -o-linear-gradient(bottom, rgba(255,244,202,.5), rgba(255,255,255,.9)); 
 background-image: linear-gradient(to top, rgba(255,244,202,.5), rgba(255,255,255,.9));
}
.btn-primary{
	background-image: -webkit-linear-gradient(bottom, #3e3e3e, #565656); background-image: -moz-linear-gradient(bottom, #3e3e3e, #565656); background-image: -o-linear-gradient(bottom, #3e3e3e, #565656); background-image: linear-gradient(to top, #3e3e3e, #565656); border:none; color:#ffcc00;
}
.btn-success{
	background-image: -webkit-linear-gradient(bottom, #28b779, #2fe294); background-image: -moz-linear-gradient(bottom, #28b779, #2fe294); background-image: -o-linear-gradient(bottom, #28b779, #2fe294); background-image: linear-gradient(to top, #28b779, #2fe294); border-color:#28b779; color:#ffcc00;
}
.headerbutton .btn-info{
	background-image: -webkit-linear-gradient(bottom, #FFCC00, #FFCC00); background-image: -moz-linear-gradient(bottom, #FFCC00, #FFCC00); background-image: -o-linear-gradient(bottom, #FFCC00, #FFCC00); background-image: linear-gradient(to top, #FFCC00, #FFCC00); border-color:#B19112 !important; color:#fff;
}
img {
  /* Silly IE...  Doesn't use bicubic by default... */
  -ms-interpolation-mode: bicubic;
}
#homepage {
 background-image:url(../images/a1.jpg);
 background-size: 100% 100%;
 min-height:600px;
 background-repeat: no-repeat;
 }

.home-modal .modal-footer{ margin-top:0; padding-top:0; border-top:none;}
.home-modal .modal-header{ border-bottom:none; text-align:center; padding-bottom:0;}
.home-modal .modal-header img{ display:inline-block; vertical-align:top}
.home-modal .modal-header h2{ display:inline-block; text-transform:uppercase; text-align:left; line-height:30px; margin-top:5px;}
.home-modal .modal-header h2 span{ color:#ffcc00; display:block}
.home-modal .modal-body { padding-bottom:0;}
@media (min-width: 200px) and (max-width: 480px) {
	.home-modal .modal-dialog{ margin-top:50px; width: 100%; height:auto;}
}
.circle{
	width: 135px; height: 135px; line-height: 135px; text-align:center; -webkit-border-radius: 67px 68px 68px 67px/67px 67px 68px 68px; -moz-border-radius: 67px 68px 68px 67px/67px 67px 68px 68px; border-radius: 67px 68px 68px 67px/67px 67px 68px 68px; background-color: #fc0; font-size:40px; margin:0 auto; color:#fff;
	}

.home .services{ margin:30px 0; width:100%}

.tagline{ padding:30px; font-size:30px; text-align:center; background:#404040; color:#FFF; margin-bottom:30px;}
.tagline a{ background: #fc0; color:#fff;}
footer{ text-align:center; padding-bottom:0px;}
.footer-icons{ font-size:30px; margin-top:20px;}
.footer-icons a{color:#404040;}
.footer-icons a:hover{ text-decoration:none}

.add{ height:110px; background:#CCC}
.addBlock{ 
margin-top: 8px;
margin-bottom: 8px;
margin-left: 12px;
margin-right: 8px;
max-width:98%}

.searchForm{ padding:5px;}

.bootstrap-select:not([class*="span"]):not([class*="col-"]):not([class*="form-control"]){ width:100%}
.bootstrap-select.btn-group, .bootstrap-select.btn-group[class*="span"]{ margin-bottom:0;}
@media (max-width: 990px) {	
	.searchForm .col-md-1,.searchForm .col-md-2,.searchForm .col-md-3{ margin-bottom:10px}
	.searchForm .row > .col-md-1:last-child{ margin-bottom:0;}
}
.input-group.price .form-control{ width:50%;}
.input-group.price .form-control:last-child{border-left:none;}
.searchForm .btn-primary{ width:100%}
.searchForm .well .btn-primary{ width:50%}
.searchForm .switch-light.well{ margin-left:0; min-height:34px; margin-bottom:0; cursor:pointer; font-weight:normal;}
.switch-light a {
      display: block;
      -webkit-transition: all 0.1s ease-out;
      -moz-transition: all 0.1s ease-out;
      transition: all 0.1s ease-out; }
	  .switch-light input:focus ~ a, .switch-light input:focus + label {
      outline:none; }
.switch-light span {
        color:#fff; }
		.switch-light span span:last-child{
        color:#A9A9A9; }
		.switch-light input:checked ~ span span {
        color:#A9A9A9; }
		.switch-light input:checked ~ span span:last-child {
        color:#fff; }

.map{ height:500px; border:1px solid #ccc;}
.mapContent{box-shadow:0px 0 10px rgba(0,0,0,0.6) inset; position:relative;}
.hidemap{ position:absolute; left:15px; top:0px; z-index:1}
.hidemap .btn-info{border-radius:0px 0px 4px 0px}
.results{ margin:10px auto;}

.results .col-md-7,.results .col-md-pull-6{ padding-right:0;}
.results .col-md-5,.results .col-md-push-6{ padding-left:0;}
@media (max-width: 990px){	
.results .col-md-7{ padding-right:15px;}
.results .col-md-5{ padding-left:15px;}
.detail .col-md-6{ padding-left:15px; padding-right:15px;}
}
/* ... */

